--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAcWfJ9noN4Gym22xX7C-lWyogucyO_B4">
+</script>
+
     <title>React App</title>
   </head>
   <body>
