--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAcWfJ9noN4Gym22xX7C-lWyogucyO_B4">
+    src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%">
 </script>
 
     <title>React App</title>
